--- a/mobile.css
+++ b/mobile.css
@@ -49,7 +49,7 @@ body {
 
 .logo {
   text-decoration: none;
-  color: #6070ff;
+  color: #142cff;
   font-weight: 700;
   font-style: normal;
   font-size: 18px;
@@ -93,7 +93,7 @@ p {
 }
 
 .connect {
-  color: #7f8cff;
+  color: #0f27ff;
   margin: 12px 24px 12px 24px;
   height: 24px;
   font-family: Poppins, 'Times New Roman', Times, serif;
@@ -407,7 +407,7 @@ textarea {
   font-size: 17px;
   line-height: 24px;
   letter-spacing: 3%;
-  color: #6070ff;
+  color: #4f4f4f;
   padding: 12px 10px;
 }
 
